--- a/app/templates/online.html
+++ b/app/templates/online.html
@@ -62,7 +62,7 @@ padding:5px; border-bottom: solid 1px #ddd;">
                                 <option></option>
                             </select>
                                 <button class="btn btn-primary btn-sm" id="typeconfirm">GO!</button>
-                            <hr>
+                            <p id="refreshit" style="display:none;">To change the dataset, please <a href="javascript:history.go(0)">refresh</a> the web page.</p>
                         </div>
                     </div>
                 </div>
