selector problem fixed

--- a/app/templates/help.html
+++ b/app/templates/help.html
@@ -3,114 +3,10 @@
 <div class="container">
     <div class="card">
         <div class="card-header">
-            User Manual and Frequently asked Questions
+            User Manual
         </div>
         <div class="card-body">
-            <h3>Introduction</h3>
-            <p>
-                IW-SRAHC (an Interactive Web-tool for Survival Risk Analysis based on Hierarchical Clustering) is a brand new
-                clustering and reprocessing tool used in the field of survival analysis to explore the potential
-                correlation between the life expectancy of samples and gene expression levels. The core idea is to first
-                regress the expression of different genes using the Cox proportional risk model and use the obtained
-                coefficients to construct a risk function and then calculate a risk score. The usual method is to
-                perform a hierarchical clustering analysis on these risk scores to classify the samples into different
-                risk classes. However, we believe that it is not accurate to perform hierarchical clustering analysis
-                singularly. So we proposed a cohesive re-clustering scheme based on the log-rank test as a way to
-                explore whether the results of the initial clustering can be divided again and if there is any
-                association between the divided groups This tool uses Kaplan-Meier survival curves as the measurement of
-                the delineation results.
-            </p>
-            <h3>Workflow</h3>
-            <img src="/static/images/workflow.png" class="img-fluid" alt="Responsive image"/>
-            <h3>Operation tips</h3>
-            In this part, we'll discus three main operations in the workflow and give you some tips.
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card shadow-sm">
-                        <img class="card-img-top" src="static/images/pan1.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">Prepare your local data and upload or use provided TCGA datasets.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card shadow-sm">
-                        <img class="card-img-top" src="static/images/pan2.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">Select target gene for Cox regression and calculate risk score.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card shadow-sm">
-                        <img class="card-img-top" src="static/images/pan3.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text">Split the heatmap into groups according to the boarder of differnt
-                                colors.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h4>Dataset prepare</h4>
-            <p>
-                For user who use TCGA dataset which has been embedded in this tool, this part is not important.
-                For user who want to upload their own dataset from local, please notice following tips:
-            <ul>
-                <li>Currently, this tool only supports excel datasheet, you can only upload files with suffix
-                    <code>.xls</code>or<code>.xlsx</code></li>
-                <li>Rows denotes samples and columns denotes clinical information and genes.</li>
-                <li>Your dataset must contains at least one sample and one gene.</li>
-                <li>First column is the name of each sample, and the first row is the name of clinical information
-                    and genes.
-                    <b>The cell of (row1, col1) must left blank, samples and genes must have their name.</b></li>
-                <li>From (row2, col2) and behead are all data area. The only special feature is that the second column
-                    is the sample survival status, with 0 indicating censoring 1 indicating death. The third column is
-                    the survival time of the sample, and the suggested units are days or weeks. The fourth and
-                    subsequent columns are the gene expression.
-                </li>
-                <li>You can download <a>this template</a> for reference.</li>
-            </ul>
-            </p>
-            <h4>Target gene select</h4>
-            <p>Once your data is uploaded to the server or a TCGA dataset is chosen, a list of all available
-                genes will be shown in a table. You can select genes for Cox regression</p>
-            <ul>
-                <li>At least one gene must be selected. Clicking the row or the checkbox works equally.</li>
-                <li>The column "item name" is the search field.</li>
-                <li>Once you click the Submit button, you cannot reselect the gene and submit it unless you refresh the
-                    page again.
-                </li>
-            </ul>
-            <h4>Split into groups</h4>
-            <p>The partitioning of the clustering results is the most important step in the process of using this tool,
-                and you need to pay attention to the following aspects when using it
-            <ul>
-                <li>At least split into two groups.</li>
-                <li>The grouping mainly refers to the different color blocks in the heat map, and the dendrogram above
-                    and the scatter plot below are also important reference bases.
-                </li>
-            </ul>
-            When the mouse cursor is hovered over the heat map, a pop-up prompt containing the sample name, risk score,
-            and survival time will pop up. Group splitting can be done by clicking the mouse in the right place, by
-            doing so, you are actually annotating the split line between groups.
-            </p>
-            <video src="/static/videos/sample.mp4" class="img-fluid" controls="controls"></video>
-            <hr>
-            <h3>Frequently Asked Questions</h3>
-            <div class="lead">
-                <mark>What is Runtime ID for?</mark>
-            </div>
-            <p>The runtime id is a unique identifier for each operation. The status of the operation corresponding to
-                each id is displayed on the status page. When you encounter a problem with your operation, please send
-                us an email with a description of the problem and the runtime id so that we can help you resolve it as
-                soon as possible.</p>
-            <div class="lead">
-                <mark>Is there a limit to the number of target genes?</mark>
-            </div>
-            <p>You have to select at least one gene, but technically there is no upper limit to the number of target
-                genes. Selecting too many genes may cause a failure of Cox regression. Our recommendation is to select
-                less
-                than 20 genes.</p>
+            <embed src="/static/images/manual.pdf" style="width:100%;height:650px;">
         </div>
     </div>
 </div>
